--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>校园网接入服务</title>
     <link rel="stylesheet" type="text/css" href="lib/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/loading.css">
     <style>
       * {
         margin: 0;
@@ -110,8 +111,7 @@
         right: 0px;
         z-index: 1001;
         opacity: .3;
-        background: #1ABC9C url('lib/svg/loading.svg') no-repeat fixed center;
-        background-size: 100px;
+        background-color: #1ABC9C;
       }
     </style>
     <script>
@@ -176,7 +176,11 @@
           </div>
         </header>
         <section>
-          <div id="mask"></div>
+          <div id="mask">
+            <div class="load-container load">
+              <div class="loader"></div>
+            </div>
+          </div>
           <webview id="webcontent" allowpopups></div>
         </section>
       </div>
